infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleway-ingress
  namespace: saleway
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
    - host: saleway.local
      http:
        paths:
          - path: /api/v1/cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 80
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /api/v1/checkout
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
          - path: /api/v1/refund
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
          - path: /api/v1/webhooks
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /api/v1/rating
            pathType: Prefix
            backend:
              service:
                name: rating-service
                port:
                  number: 80
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          # Frontend catches all other routes at the root
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
