infra/k8s/base/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-isolation
  namespace: ecommerce
spec:
  # Applying to ALL pods in the ecommerce namespace
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # 1. Allow traffic from any other pod within the same 'ecommerce' namespace
    - from:
        - podSelector: {}
    
    # 2. Allow external traffic from the Minikube Ingress Controller
    # (The Ingress controller usually lives in the ingress-nginx namespace)
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
